# AFS-implementation

./: CRASH.txt  Makefile  README.md  TEAM
common/: common.cmake
protos/: test.proto
src/: .project  CMakeLists.txt  afs_client.cpp  afs_client_rpc.h  afs_server.cpp  caching_performance.cpp  client_crash.h  scalability_performance.cpp  util.h
